--- a/Kantar.Randstad.GPS/Kantar.Randstad.GPS.csproj
+++ b/Kantar.Randstad.GPS/Kantar.Randstad.GPS.csproj
@@ -44,11 +44,43 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClosedXML, Version=0.76.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.76.0\lib\net40-client\ClosedXML.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="CsvHelper.Excel, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.Excel.1.0.5\lib\net40-client\CsvHelper.Excel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.5\lib\DocumentFormat.OpenXml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -120,15 +152,43 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DataController.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Entities\AgeCategory.cs" />
+    <Compile Include="Entities\Country.cs" />
+    <Compile Include="Entities\FileResult.cs" />
+    <Compile Include="Entities\FunctionGroup.cs" />
+    <Compile Include="Entities\Language.cs" />
+    <Compile Include="Entities\RandstadEmployee.cs" />
+    <Compile Include="Entities\YearsOfServiceCategory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ValidateRecords.cs" />
+    <Compile Include="Migrations\201707050812429_InitialMigration.cs" />
+    <Compile Include="Migrations\201707050812429_InitialMigration.Designer.cs" />
+    <Compile Include="Migrations\201707051410144_ChangeFieldsFromDateTimeToString.cs" />
+    <Compile Include="Migrations\201707051410144_ChangeFieldsFromDateTimeToString.Designer.cs" />
+    <Compile Include="Migrations\201707051555177_AddFileResultTableToDatabase.cs" />
+    <Compile Include="Migrations\201707051555177_AddFileResultTableToDatabase.Designer.cs" />
+    <Compile Include="Migrations\201707051635131_UpdateNumSuccessAndNumRejectToIntegers.cs" />
+    <Compile Include="Migrations\201707051635131_UpdateNumSuccessAndNumRejectToIntegers.Designer.cs" />
+    <Compile Include="Migrations\201707051640465_UpdateRandstadEmployee_RemoveManyValidators.cs" />
+    <Compile Include="Migrations\201707051640465_UpdateRandstadEmployee_RemoveManyValidators.Designer.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ExcelDataMappingToEmployee.cs" />
+    <Compile Include="Models\ExcelFileUploadModel.cs" />
+    <Compile Include="Models\RandstadEmployeeMappingToExcel.cs" />
+    <Compile Include="Models\RandstadExcelHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandstadContext.cs" />
+    <Compile Include="ValidationAttributes\ExcelFileUploadValidationAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -158,13 +218,13 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Data\Index.cshtml" />
+    <Content Include="Views\File\Details.cshtml" />
+    <Content Include="Views\File\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -173,6 +233,13 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707050812429_InitialMigration.resx" />
+    <EmbeddedResource Include="Migrations\201707051410144_ChangeFieldsFromDateTimeToString.resx" />
+    <EmbeddedResource Include="Migrations\201707051555177_AddFileResultTableToDatabase.resx" />
+    <EmbeddedResource Include="Migrations\201707051635131_UpdateNumSuccessAndNumRejectToIntegers.resx" />
+    <EmbeddedResource Include="Migrations\201707051640465_UpdateRandstadEmployee_RemoveManyValidators.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
